--- a/kitty.conf
+++ b/kitty.conf
@@ -6,7 +6,10 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      Ubuntu Mono
+# font_family      Ubuntu Mono
+# font_family      InputMono
+# font_family      FiraCode
+font_family      Fixedsys Excelsior 3.01-L2 Mono
 bold_font        auto
 italic_font      auto
 bold_italic_font auto
@@ -23,11 +26,11 @@ bold_italic_font auto
 #:     bold_italic_font Operator Mono Medium Italic
 
 # font_size 24.0
-font_size 10.0
+font_size 12.0
 
 #: Font size (in pts)
 
-adjust_line_height  0
+adjust_line_height  2
 adjust_column_width 0
 
 #: Change the size of each character cell kitty renders. You can use
@@ -218,7 +221,7 @@ sync_to_monitor yes
 
 #: Terminal bell {{{
 
-enable_audio_bell yes
+enable_audio_bell no
 
 #: Enable/disable the audio bell. Useful in environments that require
 #: silence.
@@ -243,7 +246,7 @@ bell_on_tab yes
 
 #: Window layout {{{
 
-remember_window_size  yes
+remember_window_size  no
 initial_window_width  640
 initial_window_height 400
 
@@ -492,7 +495,7 @@ allow_remote_control no
 #: content of windows, etc. Note that this even works over ssh
 #: connections.
 
-# env 
+# env
 
 #: Specify environment variables to set in all child processes. Note
 #: that environment variables are expanded recursively, so if you
