Disable alacritty URL clicking

--- a/alacritty.yml
+++ b/alacritty.yml
@@ -324,7 +324,7 @@ mouse:
     #   - (macOS) open
     #   - (Linux) xdg-open
     #   - (Windows) explorer
-    #launcher:
+    launcher: None
     #  program: xdg-open
     #  args: []
 
